<resources>
    <string name="app_name">Erk Camera</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="config">Config</string>
    <string name="configuration">Configuration</string>
    <string name="send_serial">Send\nSerial</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="first_time_password">This is first time you use this app. Please set up a new pin.</string>
    <string name="reset_password"><u>Change Password</u></string>
    <string name="api_url">API Url</string>
    <string name="token">Token</string>
    <string name="event_id">Event ID</string>
    <string name="shake_times">Shake Times</string>
    <string name="delay_sleep_times">Delay sleep time when no face detected</string>
    <string name="delay_sleep_times_input">Delay sleep time</string>
    <string name="save">Save</string>
    <string name="ip_mcu_text">IP of microcontroller</string>
    <string name="hint_ip_address">192.168.1.99</string>


</resources>
